# lib

./: Makefile.am  configure.ac
backus/: Makefile.am  main.c
champ/: Makefile.am  calc_euler.c  print.c  print_lt.c  stage1.sh  stage1_chaos.sh
dmsp/: Makefile.am  atest.c  attitude.c  attitude.h  deque.c  fluxcal.c  fluxcal.h  jump.c  jump.h  magcal.c  magcal.h  print.c  print_LTAN.c  stack.c  stage0.c  stage1-all.sh  stage1.sh  stage1_cryosat-all.sh  stage1_cryosat.sh  stage2_align.c  stage2_calibrate.c  stage2_euler.c  stage2_filter.c  stage2_jumps.c  stage2_spikes.c  stage2a.c  stage2a.sh  stage2b.c  test_quat.c  test_quat2.c  test_quat3.c  tmp.c  yuen.c
dmsp/doc/: index.rst  stage0.rst  stage1.rst  stage2.rst  stage2b.rst
dmsp/plots/: plot_jumps.gp  plot_rms.gp  plot_spikes.gp  plot_stage1a.gp  plot_stage1b.gp  plot_stage2.gp
emm/: Makefile.am  emm_write_core.c
ephemeris/: Makefile.am  eph.c  print.c  test.c
estist/: process_final.sh
euler/: Makefile.am  euler.c  euler.h  euler_calc.c  euler_calc.c.old  euler_calc.h  preproc.c
gd/: Makefile.am  necorr.c
green/: current.c  green.c  green.h
hwm/: Makefile.am
invert_eej/: Makefile.am  cfg.c  cfg.h  compare.c  corr.c  gauss.c  invert.c  inverteef.c  inverteef.h  lse.c  mag.c  mag.h  mag_eej.c  mag_grad.c  mag_grad.h  mag_log.c  mag_log_grad.c  mag_sqfilt_scalar.c  mag_sqfilt_vector.c  main.c  mkidx_swarm.sh  pde.c  pde.h  pde_common.c  plotF2.gp  process_champ.sh  sigma.c  sigma.h  sor.c  swarm2champ.c  swarmeef.c  swarmeef_print.c
invert_eej/doc/: conf.py  electro.rst  index.rst
lapack_wrapper/: lapack_wrapper.c  lapack_wrapper.h
magdata/: Makefile.am  magdata.c  magdata.h  preproc.c  print.c
magfit/: Makefile.am  compare.c  gauss.c  gaussint.c  lc_scalar.c  magfit.c  magfit.h  main.c  pca.c  rc.c  secs1d.c  secs2d.c  sheet.c
mfield/: EEJ_preproc.cfg  MF.cfg  MF_cryosat_preproc.cfg  MF_dmsp.cfg  MF_dmsp_preproc.cfg  MF_preproc.cfg  Makefile.am  OBS.cfg  combine_SA_maps.sh  gmtscat.sh  mfield.c  mfield.h  mfield_align.c  mfield_align.h  mfield_compare.c  mfield_dBdt.c  mfield_data.c  mfield_data.h  mfield_emag.c  mfield_error.c  mfield_error.h  mfield_euler.c  mfield_euler.h  mfield_fluxcal.c  mfield_fluxcal.h  mfield_gn.c  mfield_main.c  mfield_multifit.c  mfield_multilarge.c  mfield_nonlinear.c  mfield_plot.c  mfield_preproc.c  mfield_preproc_EEJ.c  mfield_preproc_filter.c  mfield_preproc_obs.c  mfield_residual.c  mfield_residual.h  mfield_sht_test.c  mfield_synth.c  mkbin_champ.sh  (+11 more)
mfield/doc/: conf.py  datavis.rst  index.rst  internal.rst  model.rst  preproc.rst  sh.rst
mfield/plots/: plot_align.gp  plot_euler.gp  plot_fluxcal.gp  plot_resid.gp
pca/: Makefile.am  pca.c  pca.h.in  plot_chi_complex.c  plot_maps.c  print.c  print2.c  stage1.c  stage1_ind.c  stage2.c  stage2_complex.c  stage2b.c  stage2b_ind.c  stage3.c  stage3b.c  tiegcm_read.c  window.h
pca3d/: INVERT.cfg  INVERT_preproc.cfg  Makefile.am  README  common.c  grid_residuals.sh  invert.c  invert.h  invert_data.c  invert_data.h  invert_main.c  invert_multifit.c  invert_multilarge.c  invert_nonlinear.c  invert_postproc.c  invert_postproc_lcurve.c  invert_postproc_normal.c  invert_postproc_print.c  invert_postproc_tsqr.c  invert_preproc.c  invert_preproc_filter.c  invert_print.c  invert_regularize.c  invert_residual.c  invert_residual.h  invert_smode.c  invert_smode.h  invert_synth.c  invert_synth.h  invert_tmode.c  invert_tmode.h  invert_write_tmode.c  io.c  io.h  mkbin_champ.sh  mkbin_cryosat.sh  mkbin_oersted_f.sh  mkbin_oersted_l.sh  mkbin_swarm.sh  pca3d.h.in  (+31 more)
pca3d/plots/: plot_B.gp  plot_B_map.gp  plot_EZIE1.gp  plot_EZIE1b.gp  plot_EZIE2.gp  plot_J.gp  plot_J_map.gp  plot_SH.gp  plot_modes.gp  plot_modes.sh  plot_spectrogram.gp  plot_spectrogram2b.gp  plot_variance.gp  plot_windows_SH.gp
peak/: Makefile.am  peak.c  peak.h
pej/: Makefile.am  pej.c  pej.h  print_obs.c  stage1.c  stage1_obs.c  stage2.c
poltor/: Makefile.am  compare_plp.c  invert_main.c  plot.c  poltor.c  poltor.h  poltor_nonlinear.c  poltor_preproc.c  poltor_synth.c  preproc.c
superlu/: dat  superlu.h  superlu_mt.c  test.c
swarm/: Makefile.am  calc_crf2s.c  calc_euler.c  crust.c  crustal1.c  eulersat.c  filter.c  magcal.c  magcal.h  mkidx_swarm.sh  plot_tracks.c  plotsep.c  print.c  print_all.c  print_alt.c  print_crust.c  print_efi.c  print_lp.c  print_lt.c  print_tracks.c  residuals.c  stage1.sh  swarmcdf2fday.c
track/: Makefile.am  print.c  track.c  track.h  track_filter.c  track_synth.c
