# The order of these directories is important, as some
# directories need to be built before others
SUBDIRS =         \
  backus          \
  efi             \
  ephemeris       \
  green           \
  grid            \
  grobs           \
  iri             \
  julia           \
  lapack_wrapper  \
  lis             \
  lls             \
  msis            \
  mageq           \
  magfit          \
  peak            \
  superlu         \
  hwm             \
  cond            \
  pomme           \
  magdata         \
  euler           \
	emm             \
  estist          \
  champ           \
  poltor          \
  invert_eej      \
  pca             \
  pca3d           \
  pej             \
  swarm           \
  gd              \
  dmsp            \
  mfield          
