# The order of these directories is important, as some
# directories need to be built before others
SUBDIRS =         \
  backus          \
  efi             \
  green           \
  grid            \
  grobs           \
  iri             \
  julia           \
  lapack_wrapper  \
  lis             \
  lls             \
  msis            \
  magfit          \
  superlu         \
  hwm             \
  cond            \
	emm             \
  estist          \
  champ           \
  poltor          \
  invert_eej      \
  pca             \
  pca3d           \
  pej             \
  swarm           \
  gd              \
  dmsp            \
  mfield          
