# The order of these directories is important, as some
# directories need to be built before others
SUBDIRS =         \
  backus          \
  efi             \
  grid            \
  grobs           \
  iri             \
  julia           \
  lis             \
  msis            \
  magfit          \
  superlu         \
  hwm             \
  cond            \
	emm             \
  estist          \
  champ           \
  poltor          \
  invert_eej      \
  pca             \
  pej             \
  swarm           \
  gd              \
  dmsp            \
  mfield          
