check_PROGRAMS = necorr necorrJ

necorr_SOURCES = necorr.c
necorr_LDADD = -ltrack -lcommon -lmsynth -lm -lcdf -lsatdata -lindices ~/usr/lib/libgsl.a -lgslcblas

necorrJ_SOURCES = necorrJ.c
necorrJ_LDADD = -ltrack -lapex -lcommon -lmsynth -lm -lcdf -lsatdata -lindices ~/usr/lib/libgsl.a -lgslcblas -lgfortran

AM_CPPFLAGS =
